--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           package="com.devmatic.fruits">
 
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
 	<application
 			android:name=".FruitApp"
 			android:allowBackup="false"
@@ -11,13 +12,16 @@
 			android:roundIcon="@mipmap/ic_launcher_round"
 			android:supportsRtl="true"
 			android:theme="@style/AppTheme">
-        <activity android:name=".presenter.main.MainActivity"
-                  android:configChanges="orientation">
+		<activity
+				android:name=".presenter.main.MainActivity"
+				android:configChanges="orientation">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
 
 				<category android:name="android.intent.category.LAUNCHER"/>
 			</intent-filter>
+		</activity>
+		<activity android:name=".presenter.fruiteditor.ViewEditActivity">
 		</activity>
 	</application>
 
